--- a/index.html
+++ b/index.html
@@ -34,21 +34,21 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 23 de septiembre de 2025</h3>
+        <h3>Martes 30 de septiembre de 2025</h3>
         <ul>
-          <li>Sopa de ramen con verduras</li>
-          <li>Blanquillos</li>
+          <li>Sopa de minestrone</li>
+          <li>Caraotas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
           <li>Albondigas en salsa napolitana</li>
-          <li>Arroz mixto</li>
-          <li>Filete en salsa de uchuvas</li>
-          <li>Contramuslo al horno</li>
-          <li>Lomo de cerdo en salsa chimichurri</li>
-          <li>Milanesa de pollo</li>
           <li>Frikasse de pollo</li>
-          <li>Ensalada verde</li>
-          <li>Aguapanela con limon/jugo de mango sin azucar</li>
+          <li>Costilla en salsa BBQ</li>
+          <li>Contramuslo al horno</li>
+          <li>Lomo de cerdo en salsa strogonoff</li>
+          <li>Milanesa de pollo</li>
+          <li>Filete de pollo en salsa de naranja</li>
+          <li>Ensalada dulce</li>
+          <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
