--- a/index.html
+++ b/index.html
@@ -53,21 +53,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 24 de septiembre de 2025</h3>
+        <h3>Miércoles 01 de octubre de 2025</h3>
         <ul>
-          <li>Sancocho</li>
-          <li>Arvejas</li>
+          <li>Sopa de tortilla</li>
+          <li>Arvejas amarillas</li>
           <li>Verduras al dente</li>
           <li>Pasta a las finas hierbas</li>
           <li>Papa amarilla</li>
-          <li>lomo de cerdo a la plancha</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>lomo de cerdo en salsa de tocineta</li>
+          <li>Filete de pollo en salsa de mostaza</li>
           <li>Contramuslo a la criolla</li>
-          <li>Costilla ahumada en salsa BBQ</li>
-          <li>Albondigas en salsa napolitana</li>
+          <li>Carne a la boloñesa</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de papaya sin azucar</li>
+          <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
