--- a/index.html
+++ b/index.html
@@ -71,17 +71,17 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 25 de septiembre de 2025</h3>
+        <h3>Jueves 02 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de avena con verduras</li>
+          <li>Sancocho</li>
           <li>Garbanzos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Morrillo a la criolla</li>
+          <li>arroz mixto</li>
           <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo a las finas hierbas</li>
-          <li>Suprema de pollo en salsa de tocineta</li>
+          <li>Filete de pollo en salsa de albahaca</li>
+          <li>Carne desmechada con maicitos</li>
           <li>Lomo de cerdo en salsa de ciruelas</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limón/jugo de tomate de arbol sin azucar</li>
@@ -131,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
