--- a/index.html
+++ b/index.html
@@ -89,22 +89,23 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 26 de septiembre de 2025</h3>
+        <h3>Viernes 03 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de pasta</li>
+          <li>Sopa de carantantas</li>
           <li>Frijoles</li>
           <li>Verduras al vapor</li>
+          <li>Ullucos</li>
           <li>Papa amarilla</li>
           <li>Chorizo trifasico</li>
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Filete de pollo en salsa de queso</li>
+          <li>Filete de pollo en salsa de champiñones</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de mora con limon sin azucar</li>
+          <li>Aguapanela con limon/jugo de mango sin azucar</li>
         </ul>
       </div>
       <div class="menu-alergenos">
@@ -131,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
