--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 29 de septiembre de 2025</h3>
+        <h3>Lunes 06 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de cuhuco con verduras</li>
+          <li>Sopa de platano frito</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
+          <li>Papa chorreada</li>
           <li>Papa amarilla</li>
-          <li>Lasaña mixta</li>
-          <li>Lomo de cerdo en chimichurri</li>
+          <li>Lomo de cerdo en salsa de uchuvas</li>
           <li>Morrillo a la criolla</li>
           <li>Contramuslo a la napolitana</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de mango sin azucar</li>
@@ -132,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
