--- a/index.html
+++ b/index.html
@@ -34,20 +34,19 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 30 de septiembre de 2025</h3>
+        <h3>Martes 07 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de minestrone</li>
-          <li>Caraotas</li>
+          <li>Consome celestino</li>
+          <li>Blanquillos</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Albondigas en salsa napolitana</li>
-          <li>Frikasse de pollo</li>
+          <li>Lasaña mixta con pan frances</li>
+          <li>Shop suey de cerdo</li>
           <li>Costilla en salsa BBQ</li>
-          <li>Contramuslo al horno</li>
-          <li>Lomo de cerdo en salsa strogonoff</li>
+          <li>Contramuslo apanado</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo en salsa de naranja</li>
-          <li>Ensalada dulce</li>
+          <li>Filete de pollo en salsa de la casa</li>
+          <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
@@ -132,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
