--- a/index.html
+++ b/index.html
@@ -52,20 +52,21 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 01 de octubre de 2025</h3>
+        <h3>Miércoles 08 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de tortilla</li>
+          <li>Sopa campesina</li>
           <li>Arvejas amarillas</li>
           <li>Verduras al dente</li>
           <li>Pasta a las finas hierbas</li>
           <li>Papa amarilla</li>
-          <li>lomo de cerdo en salsa de tocineta</li>
-          <li>Filete de pollo en salsa de mostaza</li>
-          <li>Contramuslo a la criolla</li>
+          <li>lomo de cerdo en salsa de strogonoff</li>
+          <li>Filete de pollo a la plancha</li>
+          <li>Suprema de pollo en salsa de tocineta</li>
+          <li>Contramuslo en su jugo</li>
           <li>Carne a la boloñesa</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo de lulo sin azucar</li>
         </ul>
       </div>
 
@@ -131,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
