--- a/index.html
+++ b/index.html
@@ -71,20 +71,20 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 02 de octubre de 2025</h3>
+        <h3>Jueves 09 de octubre de 2025</h3>
         <ul>
-          <li>Sancocho</li>
+          <li>Sopa de cuchuco</li>
           <li>Garbanzos</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>arroz mixto</li>
-          <li>Contramuslo apanado</li>
+          <li>Frikasse de pollo</li>
+          <li>Contramuslo al horno</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo en salsa de albahaca</li>
-          <li>Carne desmechada con maicitos</li>
-          <li>Lomo de cerdo en salsa de ciruelas</li>
+          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Costilla ahumada en salsa BBQ</li>
+          <li>Lomo de cerdo en chimichurri</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limón/jugo de tomate de arbol sin azucar</li>
+          <li>Aguapanela con limón/jugo de mango sin azucar</li>
         </ul>
       </div>
 
@@ -132,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
