--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 03 de octubre de 2025</h3>
+        <h3>Viernes 10 de octubre de 2025</h3>
         <ul>
-          <li>Sopa de carantantas</li>
+          <li>Sopa de pasta</li>
           <li>Frijoles</li>
           <li>Verduras al vapor</li>
           <li>Ullucos</li>
@@ -101,7 +101,7 @@
           <li>Combinado de chorizo con carne molida</li>
           <li>Milanesa de pollo</li>
           <li>Carne Molida</li>
-          <li>Filete de pollo en salsa de champiñones</li>
+          <li>Lomo de cerdo a la plancha</li>
           <li>Contramuslo a la criolla</li>
           <li>Chicharron</li>
           <li>Ensalada roja</li>
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
