--- a/index.html
+++ b/index.html
@@ -16,20 +16,20 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 06 de octubre de 2025</h3>
+        <h3>Lunes 20 de octubre de 2025</h3>
         <ul>
           <li>Sopa de platano frito</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
-          <li>Papa chorreada</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa de uchuvas</li>
-          <li>Morrillo a la criolla</li>
-          <li>Contramuslo a la napolitana</li>
-          <li>Filete de pollo en salsa de albahaca</li>
+          <li>Lomo de cerdo en salsa strogonoff</li>
+          <li>Arroz mixto</li>
+          <li>Contramuslo al horno</li>
+          <li>Filete de pollo en salsa napolitana</li>
+          <li>Hamburguesa ahumada en salsa BBQ</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de mango sin azucar</li>
+          <li>Aguapanela con limon/jugo de piña sin azucar</li>
         </ul>
       </div>
 
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
