--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 20 de octubre de 2025</h3>
+        <h3>Lunes 27 de octubre de 2025</h3>
         <ul>
           <li>Sopa de platano frito</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo en salsa strogonoff</li>
-          <li>Arroz mixto</li>
-          <li>Contramuslo al horno</li>
-          <li>Filete de pollo en salsa napolitana</li>
+          <li>Lomo de cerdo a la plancha</li>
+          <li>Canelones mixto</li>
+          <li>Contramuslo apanado</li>
+          <li>Filete de pollo en salsa de albahaca</li>
           <li>Hamburguesa ahumada en salsa BBQ</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
