Revise weekly menu for November 2025
Updated the weekly menu with new items and dates.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 27 de octubre de 2025</h3>
+        <h3>Lunes 03 de noviembre de 2025</h3>
+        <h3>Festivo</h3>
         <ul>
           <li>Sopa de platano frito</li>
           <li>Lentejas</li>
@@ -34,25 +35,24 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 07 de octubre de 2025</h3>
+        <h3>Martes 04 de noviembre de 2025</h3>
         <ul>
-          <li>Consome celestino</li>
-          <li>Blanquillos</li>
+          <li>Crema de pollo</li>
+          <li>Lentejas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
-          <li>Lasaña mixta con pan frances</li>
-          <li>Shop suey de cerdo</li>
-          <li>Costilla en salsa BBQ</li>
-          <li>Contramuslo apanado</li>
+          <li>Desgranado de pollo</li>
+          <li>Shop suey de costilla</li>
+          <li>hamburguesa en salsa BBQ</li>
           <li>Milanesa de pollo</li>
-          <li>Filete de pollo en salsa de la casa</li>
+          <li>Filete de pollo en salsa napolitana</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de mora sin azucar</li>
         </ul>
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 08 de octubre de 2025</h3>
+        <h3>Miércoles 05 de noviembre de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
           <li>Arvejas amarillas</li>
@@ -71,7 +71,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 09 de octubre de 2025</h3>
+        <h3>Jueves 06 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de cuchuco</li>
           <li>Garbanzos</li>
@@ -90,7 +90,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 10 de octubre de 2025</h3>
+        <h3>Viernes 07 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -133,6 +133,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
