--- a/index.html
+++ b/index.html
@@ -16,26 +16,25 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 03 de noviembre de 2025</h3>
+        <h3>Lunes 10 de noviembre de 2025</h3>
         <h3>Festivo</h3>
         <ul>
-          <li>Sopa de platano frito</li>
+          <li>Sopa de cuchuco</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
           <li>Papa amarilla</li>
-          <li>Lomo de cerdo a la plancha</li>
-          <li>Canelones mixto</li>
+          <li>Lomo de cerdo en salsa de coco</li>
+          <li>Shop suey de costilla</li>
           <li>Contramuslo apanado</li>
-          <li>Filete de pollo en salsa de albahaca</li>
-          <li>Hamburguesa ahumada en salsa BBQ</li>
+          <li>Filete de pollo en salsa de tocineta</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
-          <li>Aguapanela con limon/jugo de piña sin azucar</li>
+          <li>Aguapanela con limon/jugo de frutos amarillos sin azucar</li>
         </ul>
       </div>
 
       <div class="menu-day">
-        <h3>Martes 04 de noviembre de 2025</h3>
+        <h3>Martes 11 de noviembre de 2025</h3>
         <ul>
           <li>Crema de pollo</li>
           <li>Lentejas</li>
@@ -52,7 +51,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 05 de noviembre de 2025</h3>
+        <h3>Miércoles 12 de noviembre de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
           <li>Arvejas amarillas</li>
@@ -71,7 +70,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 06 de noviembre de 2025</h3>
+        <h3>Jueves 13 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de cuchuco</li>
           <li>Garbanzos</li>
@@ -90,7 +89,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 07 de noviembre de 2025</h3>
+        <h3>Viernes 14 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -133,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
