--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
       <h4>Este menu esta sujeto a cambios</h4>
 
       <div class="menu-day">
-        <h3>Lunes 10 de noviembre de 2025</h3>
-         <ul>
+        <h3>Lunes 17 de noviembre de 2025</h3>
+        <h3>festivo</h3> 
+        <ul>
           <li>Sopa de cuchuco</li>
           <li>Lentejas</li>
           <li>Verduras al vapor</li>
@@ -33,7 +34,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Martes 11 de noviembre de 2025</h3>
+        <h3>Martes 18 de noviembre de 2025</h3>
         <ul>
           <li>Crema de pollo</li>
           <li>Lentejas</li>
@@ -50,7 +51,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Miércoles 12 de noviembre de 2025</h3>
+        <h3>Miércoles 19 de noviembre de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
           <li>Arvejas amarillas</li>
@@ -69,7 +70,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Jueves 13 de noviembre de 2025</h3>
+        <h3>Jueves 20 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de cuchuco</li>
           <li>Garbanzos</li>
@@ -88,7 +89,7 @@
       </div>
 
       <div class="menu-day">
-        <h3>Viernes 14 de noviembre de 2025</h3>
+        <h3>Viernes 21 de noviembre de 2025</h3>
         <ul>
           <li>Sopa de pasta</li>
           <li>Frijoles</li>
@@ -131,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
