--- a/index.html
+++ b/index.html
@@ -54,14 +54,14 @@
         <h3>Miércoles 19 de noviembre de 2025</h3>
         <ul>
           <li>Sopa campesina</li>
-          <li>Arvejas amarillas</li>
+          <li>Arvejas</li>
           <li>Verduras al dente</li>
-          <li>Pasta a las finas hierbas</li>
+          <li>Ullucos guisados</li>
           <li>Papa amarilla</li>
-          <li>lomo de cerdo en salsa de strogonoff</li>
+          <li>lomo de cerdo</li>
           <li>Filete de pollo a la plancha</li>
-          <li>Suprema de pollo en salsa de tocineta</li>
-          <li>Contramuslo en su jugo</li>
+          <li>Shop suey de costilla</li>
+          <li>Contramuslo</li>
           <li>Carne a la boloñesa</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
@@ -132,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
