Format HTML document for weekly menu

--- a/index.html
+++ b/index.html
@@ -61,8 +61,7 @@
           <li>lomo de cerdo</li>
           <li>Filete de pollo a la plancha</li>
           <li>Shop suey de costilla</li>
-          <li>Contramuslo</li>
-          <li>Carne a la boloñesa</li>
+          <li>Contramuslo ala criolla</li>
           <li>Milanesa de pollo</li>
           <li>Ensalada mixta</li>
           <li>Aguapanela con limon/jugo de lulo sin azucar</li>
@@ -132,6 +131,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
