Revise weekly menu and allergen details
Updated the weekly menu for Cafeteria Isabela Lago, including changes to the dishes for each day and added allergen information.

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
           <li>Lentejas</li>
           <li>Verduras al dente</li>
           <li>Papa amarilla</li>
+          <li>Arroz Mixto</li>
           <li>Desgranado de pollo</li>
           <li>Shop suey de costilla</li>
           <li>hamburguesa en salsa BBQ</li>
@@ -131,6 +132,7 @@
     </footer>
   </body>
 </html>
+
 
 
 
